--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container{
+  width: 100%;
+  height: 100vh;
   color: white;
+ background-image: url('https://wallpapers.com/images/featured/dark-theme-background-q62o6998n8bqxzrf.jpg');
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
+  border: 2px solid black;
+}
+.center{
+  margin-top: 2rem;
+  text-align: center;
+  text-decoration:underline;
+}
+.firstInp{
+  width: 100%;
+  margin-top: 2rem;
+  /* border: 1px solid red; */
+}
+.forWidth{
+  width: 100%;
+  height: 7vh;
+}
+.main{
+  margin-top: 1rem;
+  display: flex;
+  text-decoration: underline;
+  justify-content: space-around;
+  /* border: 2px solid red; */
+}
+.allCheckBox{
+  width: 100%;
+  margin-top: 2rem;
+  padding: 10px;
+  /* border: 2px solid brown; */
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+.example_e {
+  border: none;
+  background-color: darkcyan;
+  color: #ffffff !important;
+  font-weight: 100;
+  padding: 20px;
+  text-transform: uppercase;
+  border-radius: 6px;
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
   }
-  to {
-    transform: rotate(360deg);
+  .example_e:hover {
+  color: #ffffff !important;
+  font-weight: 700 !important;
+  letter-spacing: 3px;
+  background: none;
+  border: 1px solid white;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.3s ease 0s;
   }
-}
