--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,21 @@
 .firstInp{
   width: 100%;
   margin-top: 2rem;
+  position: relative;
   /* border: 1px solid red; */
 }
 .forWidth{
   width: 100%;
   height: 7vh;
+}
+.icon{
+  font-size: 22px;
+  color: black;
+  position: absolute;
+  right: 10px;
+  top: 7px;
+  cursor: pointer;
+  /* border: 2px solid red; */
 }
 .main{
   margin-top: 1rem;
